--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "bullmq": "^5.53.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "pg": "^8.16.0",
+    "qrcode": "^1.5.4",
+    "sharp": "^0.34.3",
     "socks-proxy-agent": "^8.0.5",
     "telegraf": "^4.16.3",
     "uuid": "^11.1.0"
