--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.0",
     "qrcode": "^1.5.4",
     "sharp": "^0.34.3",
